feat(impl):[TRI-1216] Add additiional listener to JobProcessingFinishedEvent event - add listener and refactor Batch to contain JobProgress